download counter working, logs in progress
