# api.yaml
@@ -337,26 +337,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/Status'
   
-  '/file/{fileShortUrl}/fileInfo':
+  '/file/{fileID}/fileLogs':
     parameters:
-    - name: fileShortUrl
+    - name: fileID
       in: path
-      description: The short url of the file
+      description: The ID the file
       required: true
       schema:
         type: string
     get:
-      description: Used by INTERNAL and EXTERNAL users to get file's metadata from short url
-      operationId: getFileInfo
+      description: Used by INTERNAL and EXTERNAL users to get file's logs from ID
+      operationId: getFileLogs
       tags:
       - File
       responses:
         200:
-          description: SUCCESS Returns the File's metadat of the newly-created file
+          description: SUCCESS Returns the File's logs of the newly-created file
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FileBasics'
+                $ref: '#/components/schemas/FileLogs'
         400:
           description: BAD REQUEST the Error Message will be empty
           content:
@@ -381,6 +381,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Status'
+
+  '/file/{fileShortUrl}/fileInfo':
+      parameters:
+      - name: fileShortUrl
+        in: path
+        description: The short url of the file
+        required: true
+        schema:
+          type: string
+      get:
+        description: Used by INTERNAL and EXTERNAL users to get file's metadata from short url
+        operationId: getFileInfo
+        tags:
+        - File
+        responses:
+          200:
+            description: SUCCESS Returns the File's metadat of the newly-created file
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/FileBasics'
+          400:
+            description: BAD REQUEST the Error Message will be empty
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Status'
+          401:
+            description: UNAUTHORIZED the Error message will be empty
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Status'
+          403:
+            description: FORBIDDEN the Error message will be NotAuthorized, IllegalFileSize, DateLiesInPast, UserHasInsufficientSpace, EmptyFileName, WrongEmailStructure, WrongNameStructure, MessageTooLong
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Status'
+          500:
+            description: INTERNAL SERVER ERROR the Error Message will be empty
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Status'
 
   '/file/{fileID}':
     parameters:
@@ -756,9 +801,14 @@ components:
                 $ref: '#/components/schemas/Recipient'
               minItems: 1
               maxItems: 10
+            downloads:
+              description: number of downloads
+              type: number
+              minimum: 0
           required:
             - sharedWith
             - fileId
+            - downloads
     FileInfoRecipient:
       allOf:
         - $ref: '#/components/schemas/FileBasics'
@@ -795,6 +845,27 @@ components:
       - hasPassword
       - name
       - size
+    FileLogs:
+      type: object
+      properties:
+        fileId:
+          description: ID of the file
+          type: string
+        downloadDate:
+          description: Download date of file
+          type: string
+          format: date
+        recipient:
+          description: recipient of the file
+          type: string
+        downloadLink:
+          description: download link
+          type: string
+      required:
+      - fileId
+      - downloadDate
+      - recipient
+      - downloadLink
     FileRequest:
       allOf:
         - $ref: '#/components/schemas/FileBasics'
