# server/src/main/java/eu/europa/circabc/eushare/services/FileService.java
@@ -29,6 +29,7 @@ import javax.mail.MessagingException;
 import javax.transaction.Transactional;
 
 import org.slf4j.LoggerFactory;
+import org.sonarsource.scanner.api.internal.shaded.okhttp.Dns;
 import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -57,7 +58,9 @@ import eu.europa.circabc.eushare.model.FileInfoRecipient;
 import eu.europa.circabc.eushare.model.FileInfoUploader;
 import eu.europa.circabc.eushare.model.Recipient;
 import eu.europa.circabc.eushare.storage.DBFile;
+import eu.europa.circabc.eushare.storage.DBFileLogs;
 import eu.europa.circabc.eushare.storage.DBUser;
+import eu.europa.circabc.eushare.storage.FileLogsRepository;
 import eu.europa.circabc.eushare.storage.DBShare;
 import eu.europa.circabc.eushare.storage.FileRepository;
 import eu.europa.circabc.eushare.storage.MountPoint;
@@ -85,6 +88,9 @@ public class FileService implements FileServiceInterface {
 
     @Autowired
     private FileRepository fileRepository;
+
+    @Autowired
+    private FileLogsRepository fileLogsRepository;
 
     @Autowired
     private ShareRepository shareRepository;
@@ -365,9 +371,6 @@ public class FileService implements FileServiceInterface {
         }
     }
 
-
-   
-
     /**
      * Download the given file via the given session. Fails if the user may not
      * access the file, the file is unknown or the given password is wrong.
@@ -417,9 +420,23 @@ public class FileService implements FileServiceInterface {
             throw new WrongPasswordException();
         }
         File file = Paths.get(dbFile.getPath()).toFile();
+
+        dbFile.setDownloads(dbFile.getDownloads()+1);
+        fileRepository.save(dbFile);
+
+
+        DBFileLogs fileLogs;
+        if(dbShare==null) {
+         fileLogs = new DBFileLogs(dbFile, "owner", LocalDate.now(),"");
+        }
+        else{
+         fileLogs = new DBFileLogs(dbFile, dbShare.getEmail(), LocalDate.now(), dbShare.getShorturl());
+        }
+        fileLogsRepository.save(fileLogs);
+
+
         return new DownloadReturn(file, dbFile.getFilename(), dbFile.getSize());
     }
-
 
     @Override
     @Transactional
